--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+:root{
+    --clr1:#071952;
+    --clr2:#0B666A;
+    --clr3:#35A29F;
+    --clr4:#97FEED;
+
+}
 ::-webkit-scrollbar{
     display: none;
+}
+html{
+    font-size: 16px;
 }
 *{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -19,4 +29,25 @@ select option:focus{
     box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
     /* box-shadow:inset 0px 0px 10px 5px rgba(0, 0, 0, 0.4),inset 0px 0px 10px -5px rgba(0, 0, 0, 0.2),inset 0px 0px 20px 5px rgba(0, 0, 0, 0.2); */
     border-radius: 10px;
+}
+/* .header{
+    background-color: #fff;
+    
+}
+.header-form{
+    background-color: red;
+} */
+@media screen and (max-width:635px) {
+    .header-form{
+        /* background-color: red; */
+        width: 100%;
+        padding:0 2.5rem ;
+        flex-direction: column-reverse;
+        align-items: left;
+        gap: 0;
+    }
+    .header-sel{
+        height: 2rem;
+    }
+    
 }
